Shortcut for moving tab left and right
Other GTK apps with tabs (GNOME Terminal, Epiphany, or also the other VTE terminal BlackBox) allow moving the tab with Ctrl+Shift+PgUp/PgDown. Currently this is not supported in GNOME Console (it unexpectedly passed this key combination through to the running terminal application).