pages: allow moving tabs left/right with shortcuts

- libadwaita propagates them to the terminal when there is only a
  single page/tab
- with multiple pages/tabs, shortcuts get handled to select/reorder
  tabs as in other gnome apps
- same behavior as GNOME Terminal
- this seems a reasonable trade-off for the few case where TUIs might
  want to use those shortcuts
- leave <kbd>CTRL</kbd><kbd>HOME</kbd>/<kbd>END</kbd> disabled for now
  as those shortcuts are partly covered by Alt+0-9 or Ctrl+PgUp/PgDown
  and are more prominently used by vi
- update the keyboard shortcut list

Fix: https://gitlab.gnome.org/GNOME/console/-/issues/237
See: https://gitlab.gnome.org/GNOME/console/-/issues/118
See: https://gitlab.gnome.org/GNOME/console/-/issues/155
See: https://gitlab.gnome.org/GNOME/console/-/merge_requests/146